
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int (* chdir ) (char*) ;int (* chdrive ) (char*) ;} ;
typedef TYPE_1__ vfs_fs_fns ;
typedef int int32_t ;


 int TRUE ;
 int VFS_RES_ERR ;
 int VFS_RES_OK ;
 scalar_t__ dir_level ;
 int free (char*) ;
 TYPE_1__* myfatfs_realm (char const*,char**,int ) ;
 TYPE_1__* myspiffs_realm (char const*,char**,int ) ;
 char* normalize_path (char const*) ;
 char* strchr (char const*,char) ;
 scalar_t__ strlen (char const*) ;
 int stub1 (char*) ;
 int stub2 (char*) ;
 int stub3 (char*) ;

int32_t vfs_chdir( const char *path )
{
  vfs_fs_fns *fs_fns;
  const char *normpath = normalize_path( path );
  const char *level;
  char *outname;
  int ok = VFS_RES_ERR;
  return ok == VFS_RES_OK ? VFS_RES_OK : VFS_RES_ERR;
}
