; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/platform/extr_vfs.c_vfs_chdir.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/platform/extr_vfs.c_vfs_chdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*)*, i32 (i8*)* }

@VFS_RES_ERR = common dso_local global i32 0, align 4
@VFS_RES_OK = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@dir_level = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vfs_chdir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i8* @normalize_path(i8* %8)
  store i8* %9, i8** %4, align 8
  %10 = load i32, i32* @VFS_RES_ERR, align 4
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @VFS_RES_OK, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @VFS_RES_OK, align 4
  br label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @VFS_RES_ERR, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i32 [ %15, %14 ], [ %17, %16 ]
  ret i32 %19
}

declare dso_local i8* @normalize_path(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
